crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/ContractDefinition/missing_field_type/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Semicolon. One of AtKeyword_Unreserved, ConstantKeyword_Reserved, ErrorKeyword_Unreserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, ImmutableKeyword_Reserved, InternalKeyword_Reserved, LayoutKeyword_Unreserved, OpenBracket, OverrideKeyword_Reserved, Period, PrivateKeyword_Reserved, PublicKeyword_Reserved, RevertKeyword_Unreserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/SourceUnit/ContractDefinition/missing_field_type/input.generated.sol:5:8]
   │
 5 │   field;
   │        ┬  
   │        ╰── Error occurred here.
───╯
